# jeff_ci

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/studies/generate_data/: plot.sh  slurm.sh  slurm_32M.sh
docs/studies/generate_data/random/: slurm.sh
docs/studies/ilya_test/: run_sim_study.py
docs/studies/lnl_1d/: index.md  run_active_learner.py
docs/studies/load_cached/: plot_1d_lnl_using_cache.py  sample_lnl_from_cache.py
docs/studies/parse_ilya_posteriors/: plotting.py  posteriors_to_weights.py  sanity_check_prior.py
src/cosmic_integration/: __init__.py  lnl_computer.py  observation.py  plot_rate.py  ratesSampler.py  utils.py
src/cosmic_integration/cli_tools/: generate_random_samples.py  make_comparison_matrix.py  run_1d_lnl_check.py  train_surrogate.py
src/cosmic_integration/lnl_surrogate/: active_learner.py  lnl_surrogate.py  plotting.py  run_sampler.py
tests/: conftest.py  test_active_learner.py  test_lnl.py  test_lnl_surrogate.py  test_plot.py  test_rateSampler.py
